Add Standesamt gallery.

--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -57,11 +57,20 @@
 </div>
 <div class="row">
     <div class="col-sm-3">
-        <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w" target="_blank">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh8kPde1zEzIGNfaQ4g" target="_blank">
             <div class="round">
-                <img src="~/img/OneDrive.png" />
+                <img src="~/img/gallery_standesamt.png" />
             </div>
             <br />
+            Standesamt (163)
+        </a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w" target="_blank">
+            <div class="round">
+                <img src="~/img/OneDrive.png"/>
+            </div>
+            <br/>
             Alle Fotos
         </a>
     </div>
