Remove useless pages, directly redirect to photos.

--- a/src/Dorothy/Views/Home/Login.cshtml
+++ b/src/Dorothy/Views/Home/Login.cshtml
@@ -11,7 +11,7 @@
 
     <div class="col-md-6">
         <p>
-            Auf dieser Seite findest du alle wichtigen (und weniger wichtigen) Informationen zur Hochzeit gesammelt und aktuell gehalten.
+            Christina und Hannes haben geheiratet. Vielen Dank dass du dabei warst! Hier findest du nun alle Fotos der Hochzeit.
         </p>
 
         <p>
