--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -66,12 +66,12 @@
         </a>
     </div>
     <div class="col-sm-3">
-        <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w" target="_blank">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh80yUFY79sU_mHwaoQ" target="_blank">
             <div class="round">
-                <img src="~/img/OneDrive.png"/>
+                <img src="~/img/gallery_gerhard.png"/>
             </div>
             <br/>
-            Alle Fotos
+            Gerhards Fotos (385)
         </a>
     </div>
 </div>
