Add new gallery.

--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -74,4 +74,13 @@
             Gerhards Fotos (385)
         </a>
     </div>
+    <div class="col-sm-3">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh9FYBjIAjWm-q9wmpg" target="_blank">
+            <div class="round">
+                <img src="~/img/gallery_shooting.png" />
+            </div>
+            <br />
+            Offizielles Shooting (29)
+        </a>
+    </div>
 </div>
