--- a/src/Dorothy/Views/_ViewImports.cshtml
+++ b/src/Dorothy/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using Haufwerk
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet AppInsightScriptSnippet
